tests/rosetta/out/Rust/constrained-random-points-on-a-circle-1.error
rustc: exit status 1
error[E0308]: mismatched types
  --> /tmp/constrained-random-points-on-a-circle-1.rs:20:116
   |
20 |     let mut seen: std::collections::HashMap<&'static str, bool> = { let mut m = std::collections::BTreeMap::new(); m };
   |                                                                                                                    ^ expected `HashMap<&str, bool>`, found `BTreeMap<_, _>`
   |
   = note: expected struct `HashMap<&'static str, bool>`
              found struct `BTreeMap<_, _>`

error[E0425]: cannot find function `now` in this scope
  --> /tmp/constrained-random-points-on-a-circle-1.rs:25:21
   |
25 |         let mut x = now() % span - rMax;
   |                     ^^^ not found in this scope

error[E0425]: cannot find function `now` in this scope
  --> /tmp/constrained-random-points-on-a-circle-1.rs:26:21
   |
26 |         let mut y = now() % span - rMax;
   |                     ^^^ not found in this scope

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0308, E0425.
For more information about an error, try `rustc --explain E0308`.
